# mkdocs-generator

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
mkdocs_generator/: __main__.py  app.py  generate_config.py
